exports[`PostHeader should exist 1`] = `
<header
  className="header-post header-site"
  role="banner">
  <div
    className="content">
    <h1
      className="post-title"
      itemProp="name" />
    <p
      className="subtitle"
      itemProp="description" />
  </div>
  <a
    className="down"
    data-scroll={true}
    href="#scroll">
    <svg
      className="icon icon-angle-down">
      <use
        xlinkHref="#icon-angle-down" />
    </svg>
  </a>
  <div>
    <div
      className="search-wrapper">
      <div
        className="search-form">
        <input
          className="search-field"
          placeholder="Search..."
          type="text" />
        <svg
          className="icon-remove-sign">
          <use
            xlinkHref="#icon-close" />
        </svg>
        <ul
          className="search-results search-list" />
      </div>
    </div>
    <div
      className="overlay"
      id="fade"
      onClick={[Function bound toggleMenu]} />
    <a
      className="slideButton fade"
      id="slide">
      <svg
        className="icon-menu"
        id="open"
        onClick={[Function bound toggleMenu]}
        style={
          Object {
            "display": "inline"
          }
        }>
        <use
          xlinkHref="#icon-menu" />
      </svg>
      <svg
        className="icon-menu"
        id="close"
        onClick={[Function bound toggleMenu]}
        style={
          Object {
            "display": "none"
          }
        }>
        <use
          xlinkHref="#icon-close" />
      </svg>
    </a>
    <aside
      className=""
      id="sidebar">
      <nav
        id="navigation">
        <h2>
          MENU
        </h2>
        <ul>
          <li>
            <a
              onClick={[Function bound handleClick]}
              style={Object {}}>
              Posts
            </a>
          </li>
          <li>
            <a
              onClick={[Function bound handleClick]}
              style={Object {}}>
              About
            </a>
          </li>
        </ul>
      </nav>
    </aside>
  </div>
</header>
`;

exports[`PostHeader should render props correctly 1`] = `
<header
  className="header-post header-site"
  role="banner">
  <div
    className="content">
    <time
      className="date"
      dateTime="12345"
      itemProp="datePublished">
      12 - 31 - 1969
    </time>
    <h1
      className="post-title"
      itemProp="name">
      test title
    </h1>
    <p
      className="subtitle"
      itemProp="description">
      description here
    </p>
  </div>
  <a
    className="down"
    data-scroll={true}
    href="#scroll">
    <svg
      className="icon icon-angle-down">
      <use
        xlinkHref="#icon-angle-down" />
    </svg>
  </a>
  <div>
    <div
      className="search-wrapper">
      <div
        className="search-form">
        <input
          className="search-field"
          placeholder="Search..."
          type="text" />
        <svg
          className="icon-remove-sign">
          <use
            xlinkHref="#icon-close" />
        </svg>
        <ul
          className="search-results search-list" />
      </div>
    </div>
    <div
      className="overlay"
      id="fade"
      onClick={[Function bound toggleMenu]} />
    <a
      className="slideButton fade"
      id="slide">
      <svg
        className="icon-menu"
        id="open"
        onClick={[Function bound toggleMenu]}
        style={
          Object {
            "display": "inline"
          }
        }>
        <use
          xlinkHref="#icon-menu" />
      </svg>
      <svg
        className="icon-menu"
        id="close"
        onClick={[Function bound toggleMenu]}
        style={
          Object {
            "display": "none"
          }
        }>
        <use
          xlinkHref="#icon-close" />
      </svg>
    </a>
    <aside
      className=""
      id="sidebar">
      <nav
        id="navigation">
        <h2>
          MENU
        </h2>
        <ul>
          <li>
            <a
              onClick={[Function bound handleClick]}
              style={Object {}}>
              Posts
            </a>
          </li>
          <li>
            <a
              onClick={[Function bound handleClick]}
              style={Object {}}>
              About
            </a>
          </li>
        </ul>
      </nav>
    </aside>
  </div>
</header>
`;
